--- a/templates/index.html
+++ b/templates/index.html
@@ -29,7 +29,7 @@
         <a href="products" id="products-button-text">Наши товары:</a>
     </div>
     <p id="main-page-info">
-        "Наша компания предоставляет профессиональные услуги по продаже воздуха. Здесь вы можете найти воздух на любой цвет и вкус. Ребенок вы, работяга или обычный старик, вы не можете говорить что вы дышали, пока не попробовали наш воздух. Мы начали свою работу в далеком 2023 году и заслужили доверие годами упорного труда. Наш воздух получил свисшую оценку в таких журналах как <b>neskamstoproc.com</b> и многих других всемирно известных. Купите нашу продукцию и вы не забудете о нас до конца своей жизни. <q>Oxygen - лучше воздух в легких, чем тело в гробу</q>"
+        "Наша компания предоставляет профессиональные услуги по продаже воздуха. Здесь вы можете найти воздух на любой цвет и вкус. Ребенок вы, работяга или обычный старик, вы не можете говорить что вы дышали, пока не попробовали наш воздух. Мы начали свою работу в далеком 2023 году и заслужили доверие годами упорного труда. Наш воздух получил свысшую оценку в таких журналах как <b>neskamstoproc.com</b> и многих других всемирно известных. Купите нашу продукцию и вы не забудете о нас до конца своей жизни. <q>Oxygen - лучше воздух в легких, чем тело в гробу</q>"
     </p>
     <table id="main-page-buttons-table">
         <tr>
